<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_checkout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/checkoutPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/checkout_page_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/checkoutPageTitle">

            <TextView
                android:id="@+id/cardNumberLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number" />

            <EditText
                android:id="@+id/cardNumberInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="creditCardNumber"
                android:ems="10"
                android:hint="@string/cardNumberHint"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toStartOf="@+id/middle_vertical_guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

            <TextView
                android:id="@+id/expiryLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiry_date" />

            <EditText
                android:id="@+id/expiryInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="creditCardExpirationDate"
                android:ems="10"
                android:hint="@string/mm_yy"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/middle_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/cvvLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cvv" />

            <EditText
                android:id="@+id/cvvInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="creditCardSecurityCode"
                android:ems="10"
                android:hint="@string/cvv_hint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/nameOnCardLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_on_card" />

            <EditText
                android:id="@+id/nameOnCardInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/john_doe"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:id="@+id/addressLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:id="@+id/addressInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="postalAddress"
                android:ems="10"
                android:hint="@string/address_hint"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:id="@+id/locationLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"/>

            <Spinner
                android:id="@+id/locationDropdown"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
            app:layout_constraintEnd_toStartOf="@+id/middle_vertical_guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <TextView
                android:id="@+id/countryLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country" />

            <TextView
                android:id="@+id/countryText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/canada"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/middle_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/postalCodeLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postal_code" />

            <EditText
                android:id="@+id/postalCodeInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="postalCode"
                android:ems="10"
                android:hint="@string/postal_code_hint"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout9"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/cancelButton"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

            <TextView
                android:id="@+id/phoneNumberLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/phoneNumberInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="phone"
                android:ems="10"
                android:hint="@string/phone_number_hint"
                android:inputType="phone" />
        </LinearLayout>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="cancelButtonOnClick"
            android:text="@string/cancel"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/buyButton"
            android:layout_marginTop="24dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="buyButtonOnClick"
            android:text="@string/buy"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.13" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.87" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>