<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_post_creator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="cancelButtonOnClick"
            android:text="@string/cancel"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/sellButton"
            android:layout_marginTop="24dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="sellButtonOnClick"
            android:text="@string/sell"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/uploadImageButton"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:onClick="uploadImageButtonOnClick"
            android:text="@string/upload_images_here"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/middle_vertical_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/uploadedItemImageView"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/image_of_item"
            android:scaleType="fitXY"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/middle_vertical_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/ic_menu_gallery"/>

        <Button
            android:id="@+id/removeImageButton"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:onClick="removeImageButtonOnClick"
            android:text="@string/x"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.679"
            app:layout_constraintStart_toStartOf="@+id/middle_vertical_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.492" />

        <TextView
            android:id="@+id/sellingPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_creator_page_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            style="@style/input_form_group"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/middle_vertical_guideline"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="@+id/sellingPageTitle">

            <TextView
                android:id="@+id/postTitleLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/itemNameInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/enter_your_item_name"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

            <TextView
                android:id="@+id/descriptionLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:hint="@string/describe_your_item_here"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/locationLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"/>

            <Spinner
                android:id="@+id/locationDropdown"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/clothingTypeLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <Spinner
                android:id="@+id/clothingTypeDropdown"
                android:layout_width="match_parent"
                android:layout_height="45dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout6">

            <TextView
                android:id="@+id/styleLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style" />

            <Spinner
                android:id="@+id/styleDropdown"
                android:layout_width="match_parent"
                android:layout_height="45dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout7">

            <TextView
                android:id="@+id/qualityLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quality" />

            <Spinner
                android:id="@+id/qualityDropdown"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            style="@style/input_form_group"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/cancelButton"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <TextView
                android:id="@+id/priceLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <EditText
                android:id="@+id/priceInput"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/enter_your_price_here"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.13" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.87" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.62" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>